# Intel-One-API-Paradiso

./: CMakeLists.txt  matrixGenerator.cpp  minimal.cpp  minimal.h  paradiso_solver.cpp
include/: MatrixLoader.cpp  MatrixLoader.h
